<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothPig</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_name">User Name</string>
    <string name="action_host">Host Game</string>
    <string name="action_join">Join Game</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to joining/hosting a game -->
    <string name="action_scan">(Re)Scan Area</string>

</resources>
