<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:choiceMode="singleChoice" >

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:textColor="@color/link_text_material_dark" />

    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/apptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_join"
        android:textSize="24dp"
        android:gravity="center" />

    <RelativeLayout
        android:id="@+id/listings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/title" >
    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="60dp"
        android:layout_marginTop="10dp"
        android:text="NO HOSTS"
        android:textStyle="bold" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:drawSelectorOnTop="false" />
    </RelativeLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/scan_button"
        android:layout_below="@+id/listings"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_scan"
        android:gravity="center" />

</RelativeLayout>
